# Xbox-Live-API---Rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: api.rs  mod.rs  types.rs  utils.rs
src/app/auth/: authenticate.rs  authorize.rs  flow.rs  initial_access_token.rs  mod.rs  pre_auth.rs  utils.rs  validate.rs
