[package]
name = "xbox_live_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "cookies"] }
serde = { version = "1.0.147", features = ["derive"] }
urlencoding = "2.1.2"
async-std = { version = "1.6.5", features = ["attributes", "tokio1"] }
regex = "1.7.0"
serde_qs = "0.10.1"
dotenv = "0.15.0"
